2011-11-09 tatuya
* Add same_total_quantity into PaySheetModel.

2011-10-12 tatuya
* Add preferred_accounting_bank_account_display_method into AccountingPreference to select the way to display bank account.

2011-06-20 Kazuhiko
* add delivery_mode category in TradeModelPath.

2011-04-24 Kazuhiko
* remove 'id' from BaseType/searchable_text_property_id_property's default.

2011-02-24 Kazuhiko
* make the default of 'language' property an empty string instead of None, so that we can make a query like language in ('en', '').